Fix layout bugs

--- a/loopstudio/styles/_variables.scss
+++ b/loopstudio/styles/_variables.scss
@@ -2,6 +2,7 @@ $sm: 0.5rem;
 $m: 1rem;
 $ml: 1.5rem;
 $lg: 2rem;
+$xl: 2.5rem;
 
 // content max-width
 $content-size: 35rem;
