--- a/loopstudio/styles/component/_card.scss
+++ b/loopstudio/styles/component/_card.scss
@@ -3,6 +3,7 @@
   height: max-content;
   max-width: $content-size;
   margin-bottom: $lg;
+  overflow: hidden;
 
   &__title {
     position: absolute;
@@ -16,5 +17,18 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+}
+
+
+@media screen and (min-width: $medium) {
+  .card {
+    height: 35rem;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: $large) {
+  .card {
+    height: max-content;
   }
 }
