--- a/loopstudio/styles/sections/_about.scss
+++ b/loopstudio/styles/sections/_about.scss
@@ -40,7 +40,7 @@
 
     &__image {
       max-width: 100%;
-      max-height: 100%;
+      margin-bottom: 0;
       grid-column: 1 / 4;
       grid-row: 1 / -1;
     }
